--- a/calculator-app/calculator-server/package.json
+++ b/calculator-app/calculator-server/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.26.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
-    "express-xml-bodyparser": "^0.3.0",
     "http-status": "^1.5.0"
   },
   "devDependencies": {
